# BaseCamp_console_task

./: README.txt  WBS.xlsx
Client/: Makefile  functions.h
Server/: functions.h  main.cpp
Solution/: README.txt
Solution/CrossPlatformClient/: CMakeLists.txt
Solution/CrossPlatformClient/includes/: custom_network.h  functions.h  mouse_handler.h
Solution/CrossPlatformClient/src/: custom_network.cpp  functions.cpp  mouse_handler.cpp
Solution/CrossPlatformServer/: CMakeLists.txt
Solution/CrossPlatformServer/includes/: custom_network.h  functions.h
Solution/CrossPlatformServer/src/: custom_network.cpp  functions.cpp  main.cpp
Working_prototype/: README.txt  WBS.xlsx
Working_prototype/Client/: functions.cpp  main.cpp
Working_prototype/Server/: Makefile  functions.cpp
